--- a/src/scss/themes/theme-simple.scss
+++ b/src/scss/themes/theme-simple.scss
@@ -11,7 +11,7 @@
     // App
     // =========================================================================
     // Borders
-    --border-radius-s                    : 2px;
+    --border-radius-s                    : 3px;
     --border-radius-m                    : 4px;
     --border-radius-l                    : 8px;
 
@@ -30,17 +30,24 @@
     --blockquote-border-width            : 0 0 0 4px;
 
     // Code
-    --code-inline-background             : var(--mono-tint2);
+    --code-inline-background             : #e6e8ee;
+    --code-inline-color                  : #50687c;
     --code-theme-background              : var(--mono-tint3);
+    --code-font-family                   : "Jetbrains Mono", "Source Code Pro", Inconsolata, Monaco, Consolas, SFMono-Regular, "Andale Mono", "Liberation Mono", "Ubuntu Mono", Menlo, "Sarasa Term SC", 'Courier New', Courier, monospace;
 
     // Headings
     --heading-font-weight                : var(--strong-font-weight);
-    --heading-h1-font-weight             : 400;
-    --heading-h2-font-weight             : 400;
+    --heading-h1-font-size               : 1.9rem;
+    --heading-h2-font-size               : 1.6rem;
+    --heading-h1-font-weight             : 600;
+    --heading-h2-font-weight             : 600;
+    --heading-h3-font-weight             : 600;
     --heading-h2-border-color            : var(--mono-tint2);
     --heading-h2-border-width            : 0 0 1px 0;
-    --heading-h2-margin                  : 2.5rem 0 1.5rem;
-    --heading-h2-padding                 : 0 0 1rem 0;
+    --heading-h2-padding                 : 0 0 0.5rem 0;
+    --heading-h2-margin                  : 2rem 0 0rem;
+    --heading-h3-margin                  : 1.2rem 0 0rem;
+    --heading-h4-margin                  : 1rem 0 0rem;
 
     // Keyboard
     --kbd-border                         : 1px solid var(--mono-tint2);
@@ -80,7 +87,9 @@
 
     // Tables
     --table-cell-border-color            : var(--mono-tint2);
-    --table-cell-border-width            : 1px 0;
+    --table-cell-border-width            : 1px;
+    --table-head-border-color            : var(--mono-tint2);
+    --table-head-border-width            : 1px;
 
 
     // Cover
@@ -165,9 +174,9 @@
 
     // Nav Page Links
     --sidebar-nav-pagelink-background-image             : #{chevron-data-uri(right, 7px, null, 1.5, #b3b3b3)};
-    --sidebar-nav-pagelink-background-image--active     : #{chevron-data-uri(down, null, 7px, 1.5, #0b87da)};
-    --sidebar-nav-pagelink-background-image--collapse   : #{chevron-data-uri(right, 7px, null, 1.5, #0b87da)};
-    --sidebar-nav-pagelink-background-image--loaded     : #{chevron-data-uri(down, null, 7px, 1.5, #0b87da)};
+    --sidebar-nav-pagelink-background-image--active     : #{chevron-data-uri(down, null, 7px, 1.5, #0396FF)};
+    --sidebar-nav-pagelink-background-image--collapse   : #{chevron-data-uri(right, 7px, null, 1.5, #0396FF)};
+    --sidebar-nav-pagelink-background-image--loaded     : #{chevron-data-uri(down, null, 7px, 1.5, #0396FF)};
     --sidebar-nav-pagelink-background-position          : 3px center;
     --sidebar-nav-pagelink-background-position--active  : left center;
     --sidebar-nav-pagelink-background-position--collapse: var(--sidebar-nav-pagelink-background-position);
@@ -176,7 +185,13 @@
     --sidebar-nav-pagelink-transition                   : none;
 
     // Toggle
-    --sidebar-toggle-background                         : var(--sidebar-border-color);
     --sidebar-toggle-border-radius                      : 0 var(--border-radius-s) var(--border-radius-s) 0;
     --sidebar-toggle-width                              : 32px;
+
+    // New
+    --sidebar-link-active                               : #0396FF;
+    --sidebar-app-name                                  : #3f3f3f;
+    --content-info                                      : #909faf;
+    --sidebar-toggle-bk                                 : #fff;
+    --sidebar-toggle-border                             : #e8e8e8;
 }
