support dark mode

--- a/src/scss/app/_base.scss
+++ b/src/scss/app/_base.scss
@@ -57,6 +57,7 @@ hr {
     margin: 2em 0;
     border: none;
     border-bottom: var(--hr-border, 0);
+    border-color: var(--hr-border-color);
 }
 
 img {
