--- a/src/scss/app/_content.scss
+++ b/src/scss/app/_content.scss
@@ -453,3 +453,7 @@ footer {
     display: block;
     color: var(--content-info);
 }
+
+:not(pre) > code[class*="language-"], pre[class*="language-"] {
+	background: var(--pre-code-bk) !important;
+}
