--- a/src/scss/themes/note.scss
+++ b/src/scss/themes/note.scss
@@ -1,7 +1,19 @@
-// Theme: Simple
-// =============================================================================
 // Main Import
-@import "theme-defaults";
+@import "../app/__import";
+
+// Properties
+@import "defaults/app";
+@import "defaults/base";
+@import "defaults/content";
+@import "defaults/cover";
+@import "defaults/navbar";
+@import "defaults/plugin-copy-code";
+@import "defaults/plugin-docsify-tabs";
+@import "defaults/plugin-pagination";
+@import "defaults/plugin-search";
+@import "defaults/plugin-zoom-image";
+@import "defaults/sidebar";
+
 
 // Shared Imports
 @import "shared/code-light";
@@ -30,8 +42,6 @@
     --blockquote-border-width            : 0 0 0 4px;
 
     // Code
-    --code-inline-background             : #e6e8ee;
-    --code-inline-color                  : #50687c;
     --code-theme-background              : var(--mono-tint3);
     --code-font-family                   : "Jetbrains Mono", "Source Code Pro", Inconsolata, Monaco, Consolas, SFMono-Regular, "Andale Mono", "Liberation Mono", "Ubuntu Mono", Menlo, "Sarasa Term SC", 'Courier New', Courier, monospace;
 
@@ -42,7 +52,6 @@
     --heading-h1-font-weight             : 600;
     --heading-h2-font-weight             : 600;
     --heading-h3-font-weight             : 600;
-    --heading-h2-border-color            : var(--mono-tint2);
     --heading-h2-border-width            : 0 0 1px 0;
     --heading-h2-padding                 : 0 0 0.5rem 0;
     --heading-h2-margin                  : 2rem 0 0rem;
@@ -86,9 +95,7 @@
     --notice-tip-before-content          : "";
 
     // Tables
-    --table-cell-border-color            : var(--mono-tint2);
     --table-cell-border-width            : 1px;
-    --table-head-border-color            : var(--mono-tint2);
     --table-head-border-width            : 1px;
 
 
@@ -124,14 +131,11 @@
     // Plugin: Search
     // =========================================================================
     // Input
-    --search-input-background-color      : #fff;
-    --search-input-background-image      : #{svg-data-uri('<svg height="20px" width="20px" viewBox="0 0 24 24" fill="none" stroke="rgba(0, 0, 0, 0.3)" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" preserveAspectRatio="xMidYMid meet" xmlns="http://www.w3.org/2000/svg"><circle cx="10.5" cy="10.5" r="7.5" vector-effect="non-scaling-stroke"></circle><line x1="21" y1="21" x2="15.8" y2="15.8" vector-effect="non-scaling-stroke"></line></svg>')};
     --search-input-background-position   : 21px center;
     --search-input-border-color          : var(--sidebar-border-color);
     --search-input-border-width          : 1px 0;
     --search-input-margin                : 0 -25px;
     --search-input-padding               : 0.65em 1em 0.65em 50px;
-    --search-input-placeholder-color     : rgba(0, 0, 0, 0.4);
 
     /* Clear Button */
     --search-clear-icon-color1           : rgba(0, 0, 0, 0.3);
@@ -144,8 +148,7 @@
 
     // Sidebar
     // =========================================================================
-    --sidebar-background                                : var(--mono-tint3);
-    --sidebar-border-color                              : var(--mono-tint2);
+
     --sidebar-border-width                              : 0 1px 0 0;
 
     // Name
@@ -174,7 +177,6 @@
 
     // Nav Page Links
     --sidebar-nav-pagelink-background-image             : #{chevron-data-uri(right, 7px, null, 1.5, #b3b3b3)};
-    --sidebar-nav-pagelink-background-image--active     : #{chevron-data-uri(down, null, 7px, 1.5, #0396FF)};
     --sidebar-nav-pagelink-background-image--collapse   : #{chevron-data-uri(right, 7px, null, 1.5, #0396FF)};
     --sidebar-nav-pagelink-background-image--loaded     : #{chevron-data-uri(down, null, 7px, 1.5, #0396FF)};
     --sidebar-nav-pagelink-background-position          : 3px center;
@@ -189,9 +191,95 @@
     --sidebar-toggle-width                              : 32px;
 
     // New
-    --sidebar-link-active                               : #0396FF;
-    --sidebar-app-name                                  : #3f3f3f;
+}
+
+// Light Mode
+:root {
+    --color-mode                                        : 'light';
+    --bg-color-1                                        : #fff;
+    --bg-color-2                                        : #f2f5f8;
+    --border-color-1                                    : #e3e6eb;
+    --border-color-2                                    : #e8e8e8;
+
+    --text                                              : #37475b;
+    --theme-color                                       : #0396FF;
+    --base-color                                        : #37475b;
+    --heading-color                                     : #475b6d;
     --content-info                                      : #909faf;
-    --sidebar-toggle-bk                                 : #fff;
-    --sidebar-toggle-border                             : #e8e8e8;
+    --hr-border-color                                   : var(--border-color-1);
+    --code-inline-background                            : #e6e8ee;
+    --code-inline-color                                 : #50687c;
+    --pre-code-bk                                       : #2d2d2d;
+    
+    --sidebar-app-name                                  : #3f3f3f;
+    --sidebar-icon-color                                : #222222;
+    --sidebar-border-color                              : var(--mono-tint2);
+    --sidebar-background                                : var(--bg-color-2);
+    --sidebar-li-border-color                           : var(--border-color-2);
+    --sidebar-link-active                               : #0396FF;
+    --sidebar-toggle-bk                                 : var(--bg-color-1);
+    --sidebar-toggle-border                             : var(--border-color-2);
+    --sidebar-toggle-color                              : var(--sidebar-link-active);
+    --search-input-background-color                     : var(--bg-color-1);
+    --search-input-placeholder-color                    : rgba(0,0,0,.4);
+    --search-input-background-image                     : #{svg-data-uri('<svg height="20px" width="20px" viewBox="0 0 24 24" fill="none" stroke="rgba(0, 0, 0, 0.3)" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" preserveAspectRatio="xMidYMid meet" xmlns="http://www.w3.org/2000/svg"><circle cx="10.5" cy="10.5" r="7.5" vector-effect="non-scaling-stroke"></circle><line x1="21" y1="21" x2="15.8" y2="15.8" vector-effect="non-scaling-stroke"></line></svg>')};
+    --sidebar-nav-pagelink-background-image--active     : #{chevron-data-uri(down, null, 7px, 1.5, #0396FF)};
+    --blockquote-background                             : var(--bg-color-2);
+    --heading-h2-border-color                           : var(--border-color-1);
+    --table-cell-border-color                           : var(--mono-tint2);
+    --table-head-border-color                           : var(--mono-tint2);
+    --table-row-odd-background                          : var(--bg-color-2);
+
+}
+
+@media (prefers-color-scheme: dark) {
+    :root {
+       --color-mode                                     : 'dark';
+    }
+
+    // Dark Mode
+    :root:not([data-user-color-scheme]) {
+       --text                                           : #eff;
+       --theme-color                                    : #000;
+    }
+}
+
+// Dark Mode
+[data-user-color-scheme='dark'] {
+    --bg-color-1                                        : #252d38;
+    --bg-color-2                                        : #181C27;
+    --border-color-1                                    : #435266;
+    --border-color-2                                    : #252e3c;
+
+    --text                                              : #eff;
+    --theme-color                                       : #3298dcbb;
+    --base-color                                        : rgb(255,255,255,.9);
+    --base-background-color                             : var(--bg-color-1);
+    --content-info                                      : rgb(255,255,255,.66);
+    --heading-color                                     : rgb(255,255,255,.92);
+    --hr-border-color                                   : var(--border-color-1);
+    --code-inline-background                            : #3e4b5e;
+    --code-inline-color                                 : #c3c7cb;
+    --pre-code-bk                                       : #131824;
+
+    --sidebar-app-name                                  : rgb(255,255,255,.92);
+    --sidebar-icon-color                                : rgb(255,255,255);
+    --sidebar-border-color                              : #3a404a;
+    --sidebar-background                                : var(--bg-color-2);
+    --sidebar-li-border-color                           : var(--border-color-2);
+    --sidebar-link-active                               : #3298dc;
+    --sidebar-toggle-bk                                 : var(--bg-color-2);
+    --sidebar-toggle-border                             : var(--sidebar-border-color);
+    --sidebar-toggle-color                              : #526380;
+    --search-input-background-color                     : var(--bg-color-1);
+    --search-input-placeholder-color                    : rgba(255,255,255,.86);
+    --search-input-background-image                     : #{svg-data-uri('<svg height="20px" width="20px" viewBox="0 0 24 24" fill="none" stroke="rgba(255,255,255,.46)" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" preserveAspectRatio="xMidYMid meet" xmlns="http://www.w3.org/2000/svg"><circle cx="10.5" cy="10.5" r="7.5" vector-effect="non-scaling-stroke"></circle><line x1="21" y1="21" x2="15.8" y2="15.8" vector-effect="non-scaling-stroke"></line></svg>')};
+    --search-result-keyword-background                  : var(--border-color-1);
+    --sidebar-nav-pagelink-background-image--active     : #{chevron-data-uri(down, null, 7px, 1.5, #3298dc)};
+    --blockquote-background                             : var(--bg-color-2);
+    --heading-h2-border-color                           : var(--border-color-1);
+    --table-cell-border-color                           : #484f5c;
+    --table-head-border-color                           : #484f5c;
+    --table-row-odd-background                          : var(--bg-color-2);
+
 }
