--- a/src/scss/themes/note.scss
+++ b/src/scss/themes/note.scss
@@ -229,6 +229,8 @@
     --table-cell-border-color                           : var(--mono-tint2);
     --table-head-border-color                           : var(--mono-tint2);
     --table-row-odd-background                          : var(--bg-color-2);
+    --switch-outter                                     : #0396ffbd;
+    --switch-inner                                      : #005fa3;
 
 }
 
