--- a/src/scss/app/_navbar.scss
+++ b/src/scss/app/_navbar.scss
@@ -170,6 +170,73 @@
                     transform: translate(50%, 0);
                 }
             }
+
+            .theme-toggler{
+                display: flex;
+                align-items: center;
+                height: 100%;
+
+                .toggle{
+                    touch-action: pan-x;
+                    display: inline-block;
+                    position: relative;
+                    cursor: pointer;
+                    user-select: none;
+
+                    .toggle-track {
+                        width: 50px;
+                        height: 22px;
+                        padding: 0;
+                        border-radius: 30px;
+                        background-color: #0f1114;
+                        transition: all .2s ease;
+
+                        .toggle-track-check,  .toggle-track-x {
+                            position: absolute;
+                            width: 17px;
+                            height: 17px;
+                            top: 0;
+                            bottom: 0;
+                            margin-top: auto;
+                            margin-bottom: auto;
+                            line-height: 0;
+                        }
+
+                        .toggle-track-check {
+                            left: 5px;
+                            opacity: 0;
+                            transition: opacity .25s ease;
+                        }
+
+                        .toggle-track-x {
+                            right: 5px;
+                        }
+
+                        .checked .toggle-track-check, .toggle-track-x {
+                            opacity: 1;
+                            transition: opacity .25s ease;
+                        }
+                    }
+
+                    .checked .toggle-thumb {
+                        transform: translateX(26px);
+                        border-color: #19ab27;
+                    }
+
+                    .toggle-thumb {
+                        position: absolute;
+                        top: 2px;
+                        left: 2px;
+                        width: 18px;
+                        height: 18px;
+                        border-radius: 50%;
+                        background-color: #fff;
+                        box-sizing: border-box;
+                        transition: all .5s cubic-bezier(.23,1,.32,1) 0ms;
+                        transform: translateX(0);
+                    }
+                }
+            }
         }
     }
 }
