--- a/src/scss/app/_app.scss
+++ b/src/scss/app/_app.scss
@@ -7,6 +7,7 @@
     right: 0;
     border-bottom: 0;
     text-decoration: none;
+    transition: all var(--duration-fast) ease;
 
     svg {
         height: 70px;
