--- a/src/scss/app/_base.scss
+++ b/src/scss/app/_base.scss
@@ -174,6 +174,7 @@ body:not([data-platform^="Mac"]) {
     display: block;
     content: '';
     animation: swing 4000ms infinite alternate ease-in-out;
+    transition: all var(--duration-fast);
     
     #pull-string {
         position: absolute;
@@ -212,4 +213,5 @@ body:not([data-platform^="Mac"]) {
             transform: translateY(23px);
         }
     }
+
 }
