--- a/src/scss/themes/note.scss
+++ b/src/scss/themes/note.scss
@@ -273,7 +273,7 @@
         --heading-h2-border-color                           : var(--border-color-1);
         --table-cell-border-color                           : #484f5c;
         --table-head-border-color                           : #484f5c;
-        --table-row-odd-background                          : var(--bg-color-2);
+        --table-row-odd-background                          : #1f262f;
         --img-filter                                        : brightness(.85) contrast(1.2);
         }
 }
@@ -314,6 +314,6 @@
     --heading-h2-border-color                           : var(--border-color-1);
     --table-cell-border-color                           : #484f5c;
     --table-head-border-color                           : #484f5c;
-    --table-row-odd-background                          : var(--bg-color-2);
+    --table-row-odd-background                          : #1f262f;
     --img-filter                                        : brightness(.85) contrast(1.2);
 }
