--- a/src/scss/themes/note.scss
+++ b/src/scss/themes/note.scss
@@ -49,9 +49,13 @@
     --heading-font-weight                : var(--strong-font-weight);
     --heading-h1-font-size               : 1.9rem;
     --heading-h2-font-size               : 1.6rem;
-    --heading-h1-font-weight             : 600;
-    --heading-h2-font-weight             : 600;
-    --heading-h3-font-weight             : 600;
+    --heading-h3-font-size               : 1.333rem;
+    --heading-h4-font-size               : 1.2rem;
+    --heading-h5-font-size               : 1rem;
+    --heading-h1-font-weight             : 800;
+    --heading-h2-font-weight             : 800;
+    --heading-h3-font-weight             : 800;
+    --heading-h4-font-weight             : 600;
     --heading-h2-border-width            : 0 0 1px 0;
     --heading-h2-padding                 : 0 0 0.5rem 0;
     --heading-h2-margin                  : 2rem 0 0rem;
